<resources>
    <string name="app_name">Tuux Kabin</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="transport_image">Imagen de transporte</string>
    <string name="llamar">Llamar</string>
    <string name="cerrar">Cerrar</string>"
    <string name="addresena">Agrega tu reseña</string>
    <string name="username">Nombre de Usuario</string>
    <string name="comentario">Escribe tu comentario</string>
    <string name="saveresena">Guardar reseña</string>
    <string name="title_description">Título de la aplicación</string>
    <string name="globe_icon_description">Icono de globo terráqueo</string>
    <string name="button_text">Press Me</string>
    <string name="button_description">Botón de acción principal</string>
    <string name="fab_description">Botón de acción flotante</string>
    <string name="prueba_aplixdxd">prueba aplixdxd</string>
    <string name="presioname_hdp">presioname hdp</string>
    <string name="cenote_xkek_n">Cenote Xkekén</string>
    <string name="cenote_zac">Cenote Zací</string>
    <string name="haz_clic_aqu">¡Haz clic aquí!</string>
    <string name="facebook">Facebook</string>Ftu
    <string name="google">Google</string>
    <string name="registro">Booking</string>
    <string name="reservar_transporte">Reservar Transporte</string>
    <string name="servicios_locales">Cerrar Sesión</string>
    <string name="perfil">Perfil</string>
    <string name="explorar">Explorar</string>
    <string name="inicio">Inicio</string>

    <string name="bienvenida">Bienvenido a\nTu\'ux Ka bin</string>
    <string name="buscar">Buscar</string>
    <string name="perfil_de_usuario">Perfil de Usuario</string>
    <string name="historial_de_reservas_y_favoritos">Historial de reservas y favoritos</string>
    <string name="explorar_cenotes">Explorar Cenotes</string>
    <string name="experiencias">Experiencias</string>
    <string name="cenotes_populares">Cenotes Populares</string>
    <string name="hola_usuario">Hola, Usuario</string>
    <string name="notificaciones" />
    <string name="buscar_cenotes_experiencias">Buscar cenotes, experiencias...</string>
    <string name="abierto_8_00_am_5_00_pm">Abierto: 8:00 AM - 5:00 PM</string>
    <string name="cerrado_8_00_am_5_00_pm">Abierto: 8:00 AM - 5:00 PM</string>
    <string name="cenotes_recomendados">Cenotes Recomendados</string>
    <string name="cenote_suytun">Cenote Suytun</string>
    <string name="abierto_9_00_am_6_00_pm">Abierto: 9:00 AM - 5:00 PM</string>
    <string name="abierto_10_00_am_6_00_pm">Abierto: 10:00 AM - 6:00 PM</string>
    <string name="cenote_samula">Cenote Samula</string>
    <string name="buscar_cenotes">Buscar Cenotes</string>
    <string name="busqueda_por_voz">Busqueda por voz</string>
    <string name="reserva_tu_transporte">"Reserva tu Transporte "</string>
    <string name="busca_taxi">¿Buscas como ir?</string>
    <string name="servicios_disponibles">"Servicios Disponibles "</string>
    <string name="radio_taxi_radio_union_amarillos">Radio Taxi (Radio Union Amarillos)</string>
    <string name="buen_servicio_accesible">"Buen servicio accesible "</string>
    <string name="cierra_a_las_11_30_p_m">Cierra a las 11:30 pm</string>
    <string name="abierto_24_horas">Abierto 24 horas</string>
    <string name="servicio_premium_disponible_24_7">Servicio premium disponible 24/7</string>
    <string name="ideal_para_eventos_y_reuniones">Ideal para eventos y reuniones</string>
    <string name="palapa_para_m_s_de_200_personas">Palapa para más de 200 personas</string>
    <string name="ver_cenote">Ver Cenote</string>
    <string name="rea_de_mirador">Área de mirador</string>
    <string name="disfruta_de_vistas_panor_micas">Disfruta de vistas panorámicas</string>
    <string name="ba_os_limpios_y_accesibles">Baños limpios y accesibles</string>
    <string name="ba_os">Baños</string>
    <string name="anexo_para_eventos">Anexo para eventos</string>
    <string name="ba_os_y_vestidores">Baños y vestidores</string>
    <string name="espacios_limpios_y_c_modos">Espacios limpios y cómodos</string>
    <string name="caba_as">Cabañas</string>
    <string name="hospedaje_c_modo_y_r_stico">Hospedaje cómodo y rústico</string>
    <string name="piscinas">Piscinas</string>
    <string name="piscinas_para_toda_la_familia">Piscinas para toda la familia</string>
    <string name="estacionamiento">Estacionamiento</string>
    <string name="tirolesa">Tirolesa</string>
    <string name="aventura_en_las_alturas">Aventura en las alturas</string>
    <string name="recuerdos_nicos_de_tu_visita">Recuerdos únicos de tu visita</string>
    <string name="disfruta_de_comida_t_pica_y_bebidas">Disfruta de comida típica y bebidas</string>
    <string name="ba_os_publicos">Baños Publicos</string>
    <string name="cenote_zaci">Cenote Zaci</string>
    <string name="favoritos">Favoritos\n</string>
    <string name="descubre_experiencias_nicas_en_valladolid">Descubre experiencias únicas en Valladolid</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="alquileres">Alquileres</string>
    <string name="todos">Todos</string>
    <string name="cenote_y_alberca">Cenote y Alberca</string>
    <string name="_4_2_84">4.2 (84)</string>
    <string name="_3_5_87">3.5 (87)</string>
    <string name="amplio_espacio_para_veh_culos">Amplio espacio para vehículos</string>
    <string name="_3_70">3 (70)</string>
    <string name="_4_5_87">4.5 (87)</string>
    <string name="encuentra_productos_locales_nicos">Encuentra productos locales únicos</string>
    <string name="artesan_as">Artesanías</string>
    <string name="guarda_tus_pertenencias_de_forma_segura">Guarda tus pertenencias de forma segura</string>
    <string name="casilleros">Casilleros</string>
    <string name="disfruta_de_un_almuerzo_al_aire_libre">Disfruta de un almuerzo al aire libre</string>
    <string name="mesas_de_picnic">Mesas de Picnic</string>
    <string name="sanitarios">Sanitarios</string>
    <string name="hospedaje_c_modo_y_acogedor">Hospedaje cómodo y acogedor</string>
    <string name="habitaciones">Habitaciones</string>
    <string name="palapas_y_sillas">Palapas y Sillas</string>
    <string name="espacios_c_modos_para_relajarse">Espacios cómodos para relajarse</string>
    <string name="conexi_n_a_internet_gratuita">Conexión a internet gratuita</string>
    <string name="wifi">WiFi</string>
    <string name="zona_para_convivencia_familiar">Zona para convivencia familiar</string>
    <string name="rea_de_picnic">Área de Picnic</string>
    <string name="bebidas_refrescantes_y_c_cteles">Bebidas refrescantes y cócteles</string>
    <string name="equipo_de_seguridad_para_el_nado">Equipo de seguridad para el nado</string>
    <string name="guarda_tus_pertenencias_con_seguridad">Guarda tus pertenencias con seguridad</string>

    <string name="lorem_ipsum">
        ITSVA.
    </string>
    <string name="imagen_fondo_cenote"> cenote</string>
    <string name="app_logo">app</string>
    <string name="tuux_ka_bin"> Tu\'ux Ka bin</string>
    <string name="descubre_yucatan">Descubre la magia de Yucatán</string>
    <string name="olvide_mi_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="o">o</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="acceder_como_invitado">Acceder como invitado</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="registrarse">registrarse</string>
    <string name="fondo_cenote">fondocenote</string>
    <string name="bienvenidos_a_tuux_ka_bin">Bienvenidos a Tu\'ux Ka Bin</string>
    <string name="icono_ubicacion">ubi\n</string>
    <string name="valladolid_yucatan">Valladolid, Yucatán.</string>
    <string name="inspirational_phrase">Descubre, conecta, y transforma tu viaje. Valladolid te espera el cambio empieza contigo.</string>
    <string name="flecha_derecha">flecha</string>
    <string name="juan_p_rez">Juan Pérez</string>
    <string name="miembro_desde_2025">Miembro desde 2025</string>
    <string name="cuenta_premium">Cuenta Premium</string>
    <string name="historial_de_reservas">Historial de Reservas</string>
    <string name="beneficios_de_premium">Beneficios de Premium</string>
    <string name="opciones_de_pago">Opciones de Pago</string>
    <string name="actualizar_ahora">Actualizar Ahora</string>
    <string name="ayuda_y_soporte">Ayuda y Soporte</string>
    <string name="privacidad">Privacidad</string>

</resources>